Changed activation function to sigmoid as it was producing a model with higher accuracy in comparison to softmax

--- a/MNISTModel.ipynb
+++ b/MNISTModel.ipynb
@@ -61,6 +61,7 @@
       },
       "source": [
         "I deicided to add a hidden layer to the NN model with 620 nodes to improve the model (found 620 nodes to produce accurate model).\n",
+        "I used \"softmax\" activation function and compred the result with \"sigmoid\" function, based on the result sigmoid was producing a model with higher accuracy!\n",
         "By doing some research about which optimizer performs better, I found interesting research on https://medium.com/octavian-ai/which-optimizer-and-learning-rate-should-i-use-for-deep-learning-5acb418f9b2\n",
         "then I tried these optimizers,among them \"Adam\" was able to produce the best accuracy for this project.\n",
         "Then I played with number of iteration on the training data (epoches) and was able to produce a model with high accuracy, 99%+ on training data and 98%+ on test data."
@@ -73,9 +74,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 581
         },
-        "outputId": "d46cbc26-8bb1-4c3a-ee0a-bcf53618a373"
+        "outputId": "fc974d0b-04c3-4d2c-c779-03b44b23b27b"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -94,7 +95,7 @@
         "model = tf.keras.models.Sequential([\n",
         "  tf.keras.layers.Flatten(input_shape=(28, 28)),  #flatten 2D array to 1d array of 784 elements\n",
         "  tf.keras.layers.Dense(620, activation= 'relu'), #A hidden layer is added to NN with 620 dots\n",
-        "  tf.keras.layers.Dense(10, activation='softmax') #I found \"softmax\" activation function better then sigmoid\n",
+        "  tf.keras.layers.Dense(10, activation='sigmoid') \n",
         "])\n",
         "# I found \"Adam\" alg. to produce best result among Adadelta, Adagrad, Adam, Adamax, Ftrl, Nadam, RMSprop & SGD alg.\n",
         "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
@@ -107,7 +108,7 @@
         "print(f\"Model Loss:    {model_loss:.2f}\")\n",
         "print(f\"Model Accuray: {model_acc*100:.1f}%\")"
       ],
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,31 +117,34 @@
             "--Process data--\n",
             "--Make model--\n",
             "--Fit model--\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
             "Train on 60000 samples\n",
             "Epoch 1/10\n",
-            "60000/60000 - 8s - loss: 0.1963 - acc: 0.9428\n",
+            "60000/60000 - 10s - loss: 0.2140 - acc: 0.9376\n",
             "Epoch 2/10\n",
-            "60000/60000 - 8s - loss: 0.0801 - acc: 0.9756\n",
+            "60000/60000 - 9s - loss: 0.0862 - acc: 0.9738\n",
             "Epoch 3/10\n",
-            "60000/60000 - 8s - loss: 0.0499 - acc: 0.9844\n",
+            "60000/60000 - 9s - loss: 0.0557 - acc: 0.9827\n",
             "Epoch 4/10\n",
-            "60000/60000 - 9s - loss: 0.0361 - acc: 0.9884\n",
+            "60000/60000 - 9s - loss: 0.0404 - acc: 0.9869\n",
             "Epoch 5/10\n",
-            "60000/60000 - 9s - loss: 0.0257 - acc: 0.9917\n",
+            "60000/60000 - 9s - loss: 0.0290 - acc: 0.9907\n",
             "Epoch 6/10\n",
-            "60000/60000 - 9s - loss: 0.0192 - acc: 0.9936\n",
+            "60000/60000 - 9s - loss: 0.0221 - acc: 0.9933\n",
             "Epoch 7/10\n",
-            "60000/60000 - 9s - loss: 0.0177 - acc: 0.9942\n",
+            "60000/60000 - 9s - loss: 0.0186 - acc: 0.9938\n",
             "Epoch 8/10\n",
-            "60000/60000 - 9s - loss: 0.0132 - acc: 0.9957\n",
+            "60000/60000 - 9s - loss: 0.0148 - acc: 0.9950\n",
             "Epoch 9/10\n",
-            "60000/60000 - 9s - loss: 0.0131 - acc: 0.9957\n",
+            "60000/60000 - 9s - loss: 0.0133 - acc: 0.9956\n",
             "Epoch 10/10\n",
-            "60000/60000 - 9s - loss: 0.0099 - acc: 0.9969\n",
+            "60000/60000 - 9s - loss: 0.0108 - acc: 0.9963\n",
             "--Evaluate model--\n",
-            "10000/10000 - 1s - loss: 0.0822 - acc: 0.9821\n",
-            "Model Loss:    0.08\n",
-            "Model Accuray: 98.2%\n"
+            "10000/10000 - 1s - loss: 0.0679 - acc: 0.9838\n",
+            "Model Loss:    0.07\n",
+            "Model Accuray: 98.4%\n"
           ],
           "name": "stdout"
         }
